tests/baselines/reference/iterableArrayPattern25.errors.txt
tests/cases/conformance/es6/destructuring/iterableArrayPattern25.ts(1,30): error TS2370: A rest parameter must be of an array type.
tests/cases/conformance/es6/destructuring/iterableArrayPattern25.ts(1,33): error TS2501: A rest element cannot contain a binding pattern.


==== tests/cases/conformance/es6/destructuring/iterableArrayPattern25.ts (2 errors) ====
    function takeFirstTwoEntries(...[[k1, v1], [k2, v2]]) { }
                                 ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2370: A rest parameter must be of an array type.
                                    ~~~~~~~~~~~~~~~~~~~~
!!! error TS2501: A rest element cannot contain a binding pattern.
    takeFirstTwoEntries(new Map([["", 0], ["hello", 1]]));